update some modules
